# ofxGstRTP

./: .cproject  .gitignore  .project  OFStrreamer.md  README.md  addon_config.mk
example-all/: README.md  addons.make
example-all/example-all.xcodeproj/: project.pbxproj
example-all/example-all.xcodeproj/xcshareddata/xcschemes/: example-all Release.xcscheme
example-all/src/: Utils.cpp  Utils.h  ofApp.cpp  ofApp.h  testApp.cpp  testApp.h
example-audio/: addons.make
example-audio/example-audio.xcodeproj/: project.pbxproj
example-audio/example-audio.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example-audio/example-audio.xcodeproj/xcshareddata/xcschemes/: example-all Debug.xcscheme  example-all Release.xcscheme
example-audio/src/: main.cpp  ofApp.cpp  testApp.cpp  testApp.h
example-osc_over_rtp/: addons.make
example-osc_over_rtp/example-all.xcodeproj/: project.pbxproj
example-osc_over_rtp/example-all.xcodeproj/xcshareddata/xcschemes/: example-all Debug.xcscheme
example-osc_over_rtp/example-osc_over_rtp.xcodeproj/: project.pbxproj
example-osc_over_rtp/example-osc_over_rtp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example-osc_over_rtp/example-osc_over_rtp.xcodeproj/xcshareddata/xcschemes/: example-all Debug.xcscheme  example-all Release.xcscheme  example-osc_over_rtp Debug.xcscheme
example-osc_over_rtp/src/: main.cpp  ofApp.cpp  ofApp.h  testApp.cpp  testApp.h
example-video_audio/: addons.make
example-video_audio/example-video_audio.xcodeproj/: project.pbxproj
example-video_audio/example-video_audio.xcodeproj/xcshareddata/xcschemes/: example-all Debug.xcscheme  example-video_audio Debug.xcscheme  example-video_audio Release.xcscheme
example-video_audio/src/: ofApp.cpp  ofApp.h  testApp.cpp  testApp.h
example-video_audio_LAN/: addons.make
example-video_audio_LAN/example-video_audio_LAN.xcodeproj/: project.pbxproj
example-video_audio_LAN/example-video_audio_LAN.xcodeproj/xcshareddata/xcschemes/: example-video_audio_LAN Debug.xcscheme  example-video_audio_LAN Release.xcscheme
example-video_audio_LAN/src/: main.cpp  ofApp.h  testApp.cpp  testApp.h
example-video_audio_osc/: addons.make  config.make
example-video_audio_osc/example-video_audio.xcodeproj/xcshareddata/xcschemes/: example-all Release.xcscheme
example-video_audio_osc/example-video_audio_osc.xcodeproj/: project.pbxproj
example-video_audio_osc/example-video_audio_osc.xcodeproj/xcshareddata/xcschemes/: example-all Debug.xcscheme  example-all Release.xcscheme  example-video_audio_osc Debug.xcscheme
example-video_audio_osc/src/: main.cpp  ofApp.cpp  testApp.cpp  testApp.h
example_all/: addons.make
example_all/example-all.xcodeproj/: project.pbxproj
example_all/example-all.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example_all/src/: main.cpp  ofApp.cpp  ofApp.h
example_audio/: .cproject  .project  addons.make
example_audio/src/: main.cpp  ofApp.cpp  ofApp.h
example_osc_over_rtp/example-osc_over_rtp.xcodeproj/: project.pbxproj
example_osc_over_rtp/example-osc_over_rtp.xcodeproj/xcshareddata/xcschemes/: example-osc_over_rtp Release.xcscheme
example_osc_over_rtp/src/: main.cpp  ofApp.cpp
example_point_clouds/: addons.make
example_point_clouds/src/: main.cpp  ofApp.cpp  ofApp.h
example_video_audio/: ,  addons.make  config.ofroot.mk
example_video_audio/example-video_audio.xcodeproj/: project.pbxproj
example_video_audio/example-video_audio.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example_video_audio/src/: ofApp.cpp  ofApp.h
example_video_audio_LAN/: addons.make
example_video_audio_LAN/example-video_audio_LAN.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example_video_audio_LAN/src/: main.cpp  ofApp.cpp  ofApp.h
example_video_audio_osc/: addons.make
example_video_audio_osc/example-video_audio_osc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example_video_audio_osc/src/: ofApp.cpp  ofApp.h
libs/webrtc-audio-processing/: Makefile.am  NEWS  README  configure.ac  webrtc-audio-processing.pc.in
libs/webrtc-audio-processing/src/: Makefile.am
libs/webrtc-audio-processing/src/common_audio/: Makefile.am
libs/webrtc-audio-processing/src/common_audio/signal_processing_library/: Makefile.am
libs/webrtc-audio-processing/src/common_audio/vad/: Makefile.am
libs/webrtc-audio-processing/src/modules/: Makefile.am
libs/webrtc-audio-processing/src/modules/audio_processing/: Makefile.am  audio_processing_impl.cc
libs/webrtc-audio-processing/src/modules/audio_processing/aec/: Makefile.am
libs/webrtc-audio-processing/src/modules/audio_processing/aecm/: Makefile.am
libs/webrtc-audio-processing/src/modules/audio_processing/agc/: Makefile.am
libs/webrtc-audio-processing/src/modules/audio_processing/ns/: Makefile.am
libs/webrtc-audio-processing/src/modules/audio_processing/utility/: Makefile.am
libs/webrtc-audio-processing/src/system_wrappers/: Makefile.am
src/: ofxGstOscDoubleBuffer.cpp  ofxGstOscDoubleBuffer.h  ofxGstPixelsPool.h  ofxGstRTPClient.cpp  ofxGstRTPClient.h  ofxGstRTPConstants.h  ofxGstRTPServer.cpp  ofxGstRTPServer.h  ofxGstRTPUtils.cpp  ofxGstRTPUtils.h  ofxGstVideoDoubleBuffer.h  ofxGstXMPPRTP.cpp  ofxGstXMPPRTP.h  ofxOscPacketPool.cpp  ofxOscPacketPool.h  ofxWebRTCAudioPool.cpp  ofxWebRTCAudioPool.h
