noinst_LTLIBRARIES = libspl.la

libspl_la_SOURCES =  main/interface/signal_processing_library.h \
		     main/interface/spl_inl.h \
		     main/source/auto_corr_to_refl_coef.c \
		     main/source/auto_correlation.c \
		     main/source/complex_fft.c \
		     main/source/complex_ifft.c \
		     main/source/complex_bit_reverse.c \
		     main/source/copy_set_operations.c \
		     main/source/cos_table.c \
		     main/source/cross_correlation.c \
		     main/source/division_operations.c \
		     main/source/dot_product_with_scale.c \
		     main/source/downsample_fast.c \
		     main/source/energy.c \
		     main/source/filter_ar.c \
		     main/source/filter_ar_fast_q12.c \
		     main/source/filter_ma_fast_q12.c \
		     main/source/get_hanning_window.c \
		     main/source/get_scaling_square.c \
		     main/source/hanning_table.c \
		     main/source/ilbc_specific_functions.c \
		     main/source/levinson_durbin.c \
		     main/source/lpc_to_refl_coef.c \
		     main/source/min_max_operations.c \
		     main/source/randn_table.c \
		     main/source/randomization_functions.c \
		     main/source/refl_coef_to_lpc.c \
		     main/source/resample.c \
		     main/source/resample_48khz.c \
		     main/source/resample_by_2.c \
		     main/source/resample_by_2_internal.c \
		     main/source/resample_by_2_internal.h \
		     main/source/resample_fractional.c \
		     main/source/sin_table.c \
		     main/source/sin_table_1024.c \
		     main/source/spl_sqrt.c \
		     main/source/spl_sqrt_floor.c \
		     main/source/spl_version.c \
		     main/source/splitting_filter.c \
		     main/source/sqrt_of_one_minus_x_squared.c \
		     main/source/vector_scaling_operations.c
libspl_la_CFLAGS = $(AM_CFLAGS) $(COMMON_CFLAGS)
